--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_concept_n">8.3. <em>&lt;Concept n&gt;</em></a></li>
 </ul>
 </li>
-<li><a href="#section-design-decisions">9. Design Decisions</a></li>
+<li><a href="#section-design-decisions">9. Decisiones de diseño</a></li>
 <li><a href="#_requisitos_de_calidad">10. Requisitos de calidad</a>
 <ul class="sectlevel2">
 <li><a href="#_arbol_de_calidad">10.1. Arbol de calidad</a></li>
@@ -819,7 +819,7 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Convenciones de codificacion</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">El proyecto utiliza las convenciones de codigo para el lenguaje de TypeScript.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">El proyecto utiliza las convenciones de codigo para el lenguaje de TypeScript y utilizará la guía de estilo de Node.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Idioma</p></td>
@@ -1807,7 +1807,7 @@ los principios SOLID.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-design-decisions">9. Design Decisions</h2>
+<h2 id="section-design-decisions">9. Decisiones de diseño</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Utilizaremos las tecnologías ya mencionadas anteriormente, la pila MERN, ya que por experiencia de muchos desarrolladores son herramientas
