--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_compra_de_productos">6.1. Compra de productos</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="755" height="478">
+<img src="./images/ComprarProducto.png" alt="ComprarProducto" width="755" height="478">
 </div>
 </div>
 </div>
@@ -1400,7 +1400,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_añadir_productos">6.2. Añadir productos</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="375" height="343">
+<img src="./images/AñadirProducto.png" alt="AñadirProducto" width="375" height="343">
 </div>
 </div>
 </div>
@@ -1408,7 +1408,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_eliminar_productos">6.3. Eliminar productos</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="408" height="343">
+<img src="./images/EliminarProducto.png" alt="EliminarProducto" width="408" height="343">
 </div>
 </div>
 </div>
@@ -1416,7 +1416,7 @@ You will mainly capture scenarios in your documentation to communicate your arch
 <h3 id="_filtrar_productos">6.4. Filtrar productos</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="483" height="283">
+<img src="./images/FiltrarProducto.png" alt="FiltrarProducto" width="483" height="283">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
